# codex-agenteam

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  requirements-dev.txt  update.sh
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  codex-plugin-scanner.yml
benchmarks/: README.md
benchmarks/pilot/: agenteam.yaml  manifest.yaml
benchmarks/results/: sample-report.md  sample-results.json
benchmarks/seeds/: dispatch-scope-overlap.patch
benchmarks/tasks/: core-v1.yaml  pilot-v1.yaml
docs/: README.md  cli.md  configuration.md  hotl.md  pipeline.md  setup.md
docs/designs/: 2026-06-29-codex-native-governance-modernization.md  2026-06-29-v312-evidence-benchmark-conversion.md  2026-06-29-v313-capability-gates.md  2026-06-29-v313-structured-handoffs.md  2026-06-29-v314-benchmark-matrix-metadata.md  2026-06-30-phase-1-seeded-benchmark-pilot-design.md  team-meeting-design.md
docs/plans/: 2026-03-29-codex-team-plugin-design.md  2026-03-30-branch-isolation-design.md  2026-03-30-config-simplification-design.md  2026-03-30-scoped-parallel-writes-design.md  2026-03-30-v3-governance-completion-design.md  2026-03-30-verified-pipeline-design.md  2026-06-30-seeded-benchmark-pilot-workflow.md
docs/research/: 2026-03-29-agent-naming-conventions.md  (+5 more)
roles/: architect.yaml  dev.yaml  implementer.yaml  pm.yaml  qa.yaml  researcher.yaml  reviewer.yaml  test-writer.yaml
runtime/: agenteam_rt.py
scripts/: benchmark-pilot.py  check-update.sh  git-isolate.sh  smoke_playground.py
templates/: agenteam.yaml.template
test/: smoke.bats  test_git_isolate.bats  test_runtime.py  test_skill_contracts.py  test_smoke_playground.py
(+50 files in other folders)
